--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-token=MTAxNzI2MzIwNzgyNTU0MzIwOA.G41kSG._T9rSC1P2OJNqbaj_aRk2npHfJ6eokB9fQC3rg
+token=MTAxNzI2MzIwNzgyNTU0MzIwOA.GvDGG-._4msOQrFPg197-J9ec4PAscc561cBdGUyfhCYc
